--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: samplapp-package
-          path: $BAR_STORE
+          path: ${{ env.BAR_STORE }}
