--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main ]
 env:
- BAR_STORE: \target\SamplApp-1.0.bar
+ BAR_STORE: target\SamplApp-1.0.bar
 jobs:
   build:
     runs-on: self-hosted
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ace-package
-          path: $GITHUB_WORKSPACE${{ env.BAR_STORE }}
+          path: ${{ env.BAR_STORE }}
