--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,12 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
+      - name: List Folders
+        run: |
+          ls
       - name: Building bar file
         run: |
           mvn clean package
-          ls -lrt
       - name: Upload bar file ZIP package
         uses: actions/upload-artifact@v2
         with:
