--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Building bar file
         run: |
           mvn clean package
+      - name: Running Test Cases
+        run: |
+          mvn clean package -f AceTesting/pom.xml          
       - name: Upload bar file ZIP package
         uses: actions/upload-artifact@v2
         with:
