--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           mvn clean package -f Java_LIB/pom.xml
       - name: Building bar file for Calculator_LIB
         run: |
-          mvn clean package -f Calculator_LIB/pom.xml
+          mvn clean package -f Calculator_LIB/pom.xml -X
       - name: Building bar file for Sum_API
         run: |
           mvn clean package -f Sum_API/pom.xml
