--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         run: |
           mvn clean package -f create-integrationnode.xml 
   ACE-DELETE-NODE:
+    needs: [ACE-CI]
     environment: 
       name: LOCAL
       url: "http://localhost:4418"
