--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,19 @@ jobs:
         with:
           name: ace-package
           path: ${{ env.BAR_STORE }}
+  ACE-INSTALL-NODE:
+    needs: [ACE-CI]
+    environment: 
+      name: LOCAL
+      url: "http://localhost:4417"
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v2
       - name: Create, Start Integration Node & Server
         run: |
           mvn clean package -f create-integrationnode.xml 
-  ACE-DELETE-NODE:
-    needs: [ACE-CI]
+  ACE-UNINSTALL-NODE:
+    needs: [ACE-INSTALL-NODE]
     environment: 
       name: DEV
       url: "http://localhost:4417"
